--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
     <item name="none">0</item>
-    <item name="screen.on">103.76</item>
-    <item name="screen.full">448.43</item>
+    <item name="screen.on.display0">103.76</item>
+    <item name="screen.full.display0">448.43</item>
     <array name="cpu.clusters.cores">
         <value>4</value>
         <value>3</value>
