--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -39,4 +39,8 @@
     <bool name="config_roundedCornerMultipleRadius">true</bool>
 
     <string name="config_rounded_mask" translatable="false">M 27 0 C 5.3 -0.4 0 5.3 0 27</string>
+
+    <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+    vibrator is capable of subtle vibrations -->
+    <bool name="config_vibrateOnIconAnimation">true</bool>
 </resources>
